force-app/main/default/objects/CARE_BATCH_UPLOAD__c/CARE_BATCH_UPLOAD__c.object-meta.xml
<CustomObject>
    <description>CARE staging object for the daily CC header status, data to be communicated to CC&amp;B MT via interface</description>
    <label>CARE BATCH UPLOAD</label>
    <nameField>
        <displayFormat>BATCH{0000000000}</displayFormat>
        <label>NAME (Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE BATCH UPLOAD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>