force-app/main/default/objects/CARE_BATCH_UPLOAD__c/fields/BATCH_NO__c.field-meta.xml
<CustomField>
    <fullName>BATCH_NO__c</fullName>
    <externalId>true</externalId>
    <label>BATCH NO</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>