force-app/main/default/objects/CARE_BATCH_UPLOAD__c/fields/BATCH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>BATCH_STATUS__c</fullName>
    <label>BATCH STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>