force-app/main/default/objects/CARE_BATCH_UPLOAD__c/fields/FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>FILE_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FILE NAME</label>
    <length>254</length>
    <type>Text</type>
</CustomField>