force-app/main/default/objects/CARE_BATCH_UPLOAD__c/fields/UPLOAD_FROM__c.field-meta.xml
<CustomField>
    <fullName>UPLOAD_FROM__c</fullName>
    <label>UPLOAD_FROM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARE Ops</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CARE Mgt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>